# Magia-Forensic-Evidence-Preservation-Suite-MFEPS-

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  HANDOVER.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup_portable.ps1  start.bat  tmp_test_integration.py
.github/workflows/: ci.yml  test.yml
docs/: pyewf_fallback_design.md  release_notes_v2.1.1.md
libs/: README_ewftools.md  bzip2.lib  libbfio.lib  libcaes.lib  libcdata.lib  libcdatetime.lib  libcerror.lib  libcfile.lib  libclocale.lib  libcnotify.lib  libcpath.lib  libcsplit.lib  libcthreads.lib  libewf.exp  libewf.lib  libfcache.lib  libfdata.lib  libfdatetime.lib  libfguid.lib  libfvalue.lib  libhmac.lib  libodraw.lib  libsmdev.lib  libsmraw.lib  libuna.lib  zlib.exp  zlib.ilk  zlib.lib
src/: main.py
src/agent/: agent_main.py  agent_service.py
src/core/: aacs_reader.py  buffer_manager.py  copy_guard_analyzer.py  e01_writer.py  (+12 more)
tests/: __init__.py  conftest.py  test_aacs_reader.py  test_audit_service.py  test_buffer_manager.py  test_config.py  test_copy_guard_analyzer.py  test_dashboard_service.py  test_database.py  test_device_handle_context.py  test_dvdcss_reader.py  test_e01_writer.py  test_engine_protocol.py  test_enums.py  test_error_codes.py  test_ewfinfo.py  test_ewfinfo_integration.py  test_format_helpers.py  test_hash_engine.py  test_imaging_service.py  test_incomplete_file_detector.py  test_legal_consent.py  test_negative.py  test_optical_capacity.py  test_optical_imaging_result.py  test_output_path_helpers.py  test_path_sanitize.py  test_report_service.py  test_schema.py  test_singleton_thread_safety.py  test_storage_helpers.py  test_write_blocker.py
(+165 files in other folders)
