[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfeps"
version = "2.4.0"
description = "Magia Forensic Evidence Preservation Suite"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MFEPS Contributors"},
]
keywords = ["forensic", "imaging", "evidence", "preservation", "optical-media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "nicegui>=3.8.0",
    "sqlalchemy>=2.0",
    "aiofiles>=23.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psutil>=5.9",
    "reportlab>=4.0",
    "Jinja2>=3.1",
    "rfc3161ng>=2.1.3",
    "wmi>=1.5.1",
    "pywin32>=306",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
css = ["pydvdcss>=1.4.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/matrix9neonebuchadnezzar2199-sketch/Magia-Forensic-Evidence-Preservation-Suite-MFEPS-"
Repository = "https://github.com/matrix9neonebuchadnezzar2199-sketch/Magia-Forensic-Evidence-Preservation-Suite-MFEPS-"
Issues = "https://github.com/matrix9neonebuchadnezzar2199-sketch/Magia-Forensic-Evidence-Preservation-Suite-MFEPS-/issues"
